--- a/package.json
+++ b/package.json
@@ -19,6 +19,18 @@
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-promise": "^6.1.1",
         "globals": "^15.0.0",
-        "jest": "^27.0.6"
+        "jest": "^28.0.0",
+        "jest-environment-jsdom": "^29.7.0"
+    },
+    "jest": {
+        "testEnvironmentOptions": {
+            "browsers": [
+                "chrome"
+            ]
+        },
+        "moduleFileExtensions": [
+            "js",
+            "html"
+        ]
     }
 }
